# PatchForge

./: .gitignore  README.md
core/: go.mod  main.go
core/api/: github.go  google.go  middleware.go  profile.go  release_notes.go  repositores.go  server.go  users.go  webhook.go
core/db/: connection.go  models.go  profile.go  release_notes.go  repositories.go  users.go
core/grpc/github.com/sathwik/PatchForge/core/grpc/: schema.pb.go
core/grpc_schema/: schema_grpc.pb.go
core/tokens/: jwt.go  payload.go
core/utils/: password.go
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AboutPage.jsx  AuthPage.jsx  GithubCallback.jsx  HomePage.jsx  IntroPage.jsx  ProfilePage.jsx  RepositoriesPage.jsx  SettingsPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: theme.css
grpc/: schema.proto
insights/: main.py  models.py  pyproject.toml  server.py
insights/grpc/: schema_pb2_grpc.py
insights/grpc_files/: schema_pb2.py
insights/utils/: agent.py  models.py  prompt.py  utils.py
